samples/_failures_safe/1761440433_47948f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d9ef871.c: In function ‘main’:
./samples/SAFE/__tmp_7d9ef871.c:137:5: error: expected expression at end of input
  137 |     if (
      |     ^~
./samples/SAFE/__tmp_7d9ef871.c:137:5: error: expected declaration or statement at end of input
